# dsbf

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PROJECT_DESIGN.md  README.md  dsbf_run.json  example_config.yaml  progress_log.md  pyproject.toml  run_profile.py
.chglog/: config.yml
.github/workflows/: ci.yml
dsbf/config/: __init__.py  constants.py  default_config.yaml
dsbf/core/: base_engine.py  base_task.py  context.py
dsbf/custom_plugins/example_plugin_domain/: print_shape.py
dsbf/eda/: depth_levels.py  graph.py  profile_engine.py  stage_inference.py  task_loader.py  task_registry.py  task_result.py
dsbf/eda/renderers/: json_renderer.py
dsbf/eda/tasks/: categorical_length_stats.py  check_datetime_consistency.py  compare_with_reference_dataset.py  compute_correlations.py  compute_entropy.py  data_quality_scorer.py  detect_bimodal_distribution.py  detect_class_imbalance.py  detect_collinear_features.py  detect_constant_columns.py  detect_data_leakage.py  detect_duplicate_columns.py  detect_duplicates.py  detect_encoded_columns.py  detect_feature_drift.py  detect_high_cardinality.py  detect_id_columns.py  detect_mixed_type_columns.py  detect_near_zero_variance.py  detect_out_of_bounds.py  detect_outliers.py  detect_regex_format_violations.py  detect_single_dominant_value.py  detect_skewness.py  detect_target_drift.py  detect_zeros.py  identify_bottleneck_tasks.py  infer_types.py  log_resource_usage.py  missingness_heatmap.py  missingness_matrix.py  sample_head.py  sample_tail.py  schema_validation.py  suggest_categorical_encoding.py  suggest_numerical_binning.py  summarize_boolean_fields.py  summarize_dataset_shape.py  summarize_modes.py  summarize_nulls.py  (+5 more)
dsbf/interfaces/: __init__.py  api.py  cli.py
dsbf/layouts/: default.json
dsbf/static_metadata/: recommendation_library.yaml  task_metadata.json
dsbf/utils/: backend.py  check_recommendation_contexts.py  config_validation.py  dag_layout.py  data_loader.py  data_utils.py  display_registered_tasks.py  logging_utils.py  plot_factory.py  reco_engine.py  reliability_stats.py  report_utils.py  task_result_validator.py  task_utils.py  versioning.py
tests/: conftest.py  test_plugin_orphan_warning.py  test_task_registry_plugin.py  test_task_result_validation.py
tests/eda/: test_log_reliability_warnings.py  test_log_resource_usage.py  test_ml_impact_scoring.py  test_profile_engine.py  test_task_result.py  test_top_ml_risks_block.py
tests/eda/test_engine/: test_config_validation.py  test_execution_graph_failure.py  test_memory_tracking.py  test_profile_engine.py  test_runtime_metadata.py
tests/eda/test_tasks/: test_compute_entropy.py  (+46 more)
tests/helpers/: add_import_to_test_files.py  context_utils.py
tests/test_core/: test_base_engine.py  test_base_task.py  test_context.py
tests/test_utils/: test_data_utils.py  test_plot_factory.py  test_report_utils.py  test_task_registry.py  test_task_utils.py
tests/utils/: test_report_utils.py  test_task_utils.py
tools/: check_recommendation_contexts.py
(+2 files in other folders)
