[tool.poetry]
name = "dsbf"
version = "0.1.0"
description = "Data Scientist's Best Friend — transparent AutoML pipeline"
authors = ["Will Thurston <WilliamD.Thurston@gmail.com>"]
packages = [{ include = "dsbf" }]

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.1"
pandas = "^2.3.0"
pytest = "^8.4.0"
seaborn = "^0.13.2"
scikit-learn = "^1.7.0"
polars = "^1.30.0"
pyarrow = "^20.0.0"
networkx = "^3.5"
matplotlib = "^3.10.3"
graphviz = "^0.21"
pydot = "^4.0.1"
missingno = "^0.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^25.1.0"
flake8 = "^7.3.0"
pre-commit = "^4.2.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py312"]
exclude = '''
/(
    \.eggs
  | \.git
  | \.mypy_cache
  | \.pytest_cache
  | \.venv
  | build
  | dist
  | dsbf/outputs
)/
'''

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.isort]
profile = "black"
line_length = 88
